Fix hero title weird wrap in chrome

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -48,6 +48,7 @@ main {
 
 #hero-title {
     position: relative;
+    text-wrap: balance;
 }
 
 #hero-title>h2 {
